--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@apollo/client": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ngneat/tailwind": "^7.0.3",
     "@popperjs/core": "^2.10.2",
     "apollo-angular": "^4.2.1",
     "bootstrap": "^5.2.0",
+    "graphql": "^16",
     "jquery": "^3.6.1",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "ng-multiselect-dropdown": "^0.3.9",
     "rxjs": "~7.5.0",
     "select2": "^4.1.0-rc.0",
