--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-angular": "^4.2.1",
     "bootstrap": "^5.2.0",
     "graphql": "^16",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
